# rusty-os

./: .gitignore  Cargo.toml  README.md  x86_64-rusty-os.json
.cargo/: config.toml
boot/src/: main.rs
src/: main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs
