[package]
name = "rusty-os"
version = "0.1.0"
authors = ["Antoni Stevent <itzmjauz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10.6"

[workspace]
members = ["boot"]

#[package.metadata.bootimage]
#test-args = [ "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", 
#              "-serial", "stdio",
#              "-display", "none"
#]
#test-success-exit-code = 33 # (0x10 << 1) | 1
#test-timeout = 15 # increase this when more tests are available
